--- a/css/main.css
+++ b/css/main.css
@@ -29,3 +29,12 @@ h3 {
   left: 50%;
   margin-left: -50px;
 }
+
+.orange-square {
+    background-color: rgba(211, 163, 8, 0.836), 167, 162);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%, -50%);
+  }
