--- a/css/main.css
+++ b/css/main.css
@@ -31,10 +31,10 @@ h3 {
 }
 
 .orange-square {
-    background-color: rgba(211, 163, 8, 0.836), 167, 162);
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
+    background-color: rgb(226, 169, 12);
     /* bring your own prefixes */
     transform: translate(-50%, -50%);
   }
