--- a/css/main.css
+++ b/css/main.css
@@ -30,11 +30,12 @@ h3 {
   margin-left: -50px;
 }
 
-.orange-square {
+ /*.orange-square {
     position: absolute;
     top: 50%;
     left: 50%;
     background-color: rgb(226, 169, 12);
-    /* bring your own prefixes */
+    bring your own prefixes 
     transform: translate(-50%, -50%);
   }
+  */
